--- a/servoo_transit/views/transit_order_view.xml
+++ b/servoo_transit/views/transit_order_view.xml
@@ -9,7 +9,7 @@
                     <field name="name" />
                     <field name="external_reference" />
                     <field name="operation_type" />
-                    <field name="operation_type" />
+<!--                    <field name="operation_type" />-->
                     <field name="sub_operation_type" />
                     <field name="partner_id" />
                     <field name="transport_mode_id" />
@@ -55,7 +55,7 @@
                         </div>
                         <group>
                             <group col="4">
-                                <field name="name" readonly="1" colspan="4"/>
+                                <field name="name" readonly="0" colspan="4"/>
                                 <field name="partner_id" widget="res_partner_many2one" context="{'show_address': 1, 'show_vat': True}" options='{"always_reload": True}' colspan="4"/>
                                 <field name="external_reference" colspan="4"/>
                                 <field name="operation_type" required="1"/>
