--- a/servoo_shipping/views/shipping_pda_view.xml
+++ b/servoo_shipping/views/shipping_pda_view.xml
@@ -158,7 +158,7 @@
                                             </div>
                                             <field name="product_packaging_id" attrs="{'invisible': [('product_id', '=', False)]}" context="{'default_product_id': product_id, 'tree_view_ref':'product.product_packaging_tree_view', 'form_view_ref':'product.product_packaging_form_view'}" groups="product.group_stock_packaging" />
                                             <field name="price_unit"/>
-                                            <field name="tax_id" widget="many2many_tags" options="{'no_create': True}" context="{'search_view_ref': 'account.account_tax_view_search'}" domain="[('type_tax_use','=','sale'), ('company_id','=',parent.company_id), ('country_id', '=', parent.tax_country_id)]"
+                                            <field name="tax_id" widget="many2many_tags" options="{'no_create': True}" domain="[('type_tax_use','=','sale')]"
                                                 />
                                             <label for="discount" groups="product.group_discount_per_so_line"/>
                                             <div name="discount" groups="product.group_discount_per_so_line">
@@ -429,7 +429,7 @@
             <field name="inherit_id" ref="account.view_move_form" />
             <field name="arch" type="xml">
                 <field name="partner_id" position="after">
-                    <field name="invoice_origin" string="Source Document" force_save="1" invisible="0"/>
+                    <field name="invoice_origin" string="Source Document" invisible="0" readonly="0"/>
                 </field>
             </field>
         </record>
