--- a/servoo_stevedoring/views/outturn_report_view.xml
+++ b/servoo_stevedoring/views/outturn_report_view.xml
@@ -45,32 +45,50 @@
                                 <field name="line_ids" widget="one2many" mode="tree,form" required="1">
                                     <tree>
                                         <field name="bl_id" />
-                                        <field name="manifested_quantity" />
-                                        <field name="delivery_quantity" />
-                                        <field name="unit_id" />
                                         <field name="manifested_weight" />
                                         <field name="shortage_weight" />
+                                        <field name="excess_weight" />
+                                        <field name="delivery_weight" />
                                     </tree>
                                     <form>
                                         <sheet>
-                                            <group col="4">
-                                                <field name="bl_id" required="1" colspan="4" domain="[('consignee_id', '=', parent.consignee_id), ('vessel_id', '=', parent.vessel_id), ('voyage_number', '=', parent.voyage_number)]"/>
-                                                <field name="manifested_quantity" />
-                                                <field name="unit_id" />
-                                                <field name="shortage_quantity" />
-                                                <field name="unit_id" />
-                                                <field name="excess_quantity" />
-                                                <field name="unit_id" />
-                                                <field name="delivery_quantity" />
-                                                <field name="unit_id" />
-                                                <field name="manifested_weight" />
-                                                <field name="shortage_weight" />
-                                                <field name="excess_weight" />
-                                                <field name="delivery_weight" />
+                                            <group col="2">
+<!--                                                <field name="bl_id" required="1"/>-->
+                                                <field name="bl_id" required="1" domain="['|',('notify_id', '=', parent.consignee_id), ('vessel_id', '=', parent.vessel_id), ('voyage_number', '=', parent.voyage_number)]"/>
+                                                <field name="note" />
                                             </group>
-                                            <group string="Notes">
-                                                <field name="note" nolabel="1" />
-                                            </group>
+                                            <notebook>
+                                                <page string="Goods">
+                                                    <field name="bl_line_ids" widget="one2many" mode="tree, form" required="1">
+                                                        <tree>
+                                                            <field name="good_description" />
+                                                            <field name="manifested_weight" />
+                                                            <field name="shortage_weight" />
+                                                            <field name="excess_weight" />
+                                                            <field name="delivery_weight" />
+                                                        </tree>
+                                                        <form>
+                                                            <field name="good_description" colspan="2" required="1"/>
+                                                            <group string="Quantities" col="4">
+                                                                <field name="manifested_quantity" />
+                                                                <field name="unit_id" />
+                                                                <field name="shortage_quantity" />
+                                                                <field name="unit_id" />
+                                                                <field name="excess_quantity" />
+                                                                <field name="unit_id" />
+                                                                <field name="delivery_quantity" />
+                                                                <field name="unit_id" />
+                                                            </group>
+                                                            <group string="Tonnage" col="4">
+                                                                <field name="manifested_weight" />
+                                                                <field name="shortage_weight" />
+                                                                <field name="excess_weight" />
+                                                                <field name="delivery_weight" />
+                                                            </group>
+                                                        </form>
+                                                    </field>
+                                                </page>
+                                            </notebook>
                                         </sheet>
                                     </form>
                                 </field>
