--- a/servoo_stevedoring/views/stevedoring_file_view.xml
+++ b/servoo_stevedoring/views/stevedoring_file_view.xml
@@ -54,10 +54,16 @@
                     <header>
                         <button name="action_open" states="draft" type="object" string="Validate" groups="servoo_stevedoring.stevedoring_group_user"/>
                         <button name="action_done" states="open" type="object" string="Done" groups="servoo_stevedoring.stevedoring_group_user"/>
+
                         <button name="create_invoices" string="Create Invoice"
-                                groups="servoo_stevedoring.stevedoring_group_user"
+                                groups="account.group_account_invoice"
                                 type="object" class="btn-primary" data-hotkey="q"
                                 attrs="{'invisible': ['|',('state', '!=', 'open'), ('invoice_count','&gt;=',1)]}"/>
+
+                        <button name="create_invoices" string="Create Invoice"
+                                type="object" data-hotkey="q" groups="account.group_account_invoice"
+                                attrs="{'invisible': ['|',('state', '!=', 'open'), ('invoice_count','=',0)]}"/>
+
                         <button name="%(action_wizard_stevedoring_outturn_report)d"
                                 groups="servoo_stevedoring.stevedoring_group_user"
                                                 string="Create Outturn Report" type="action"/>
@@ -78,15 +84,21 @@
                             </button>
                             <button name="open_operation_action" type="object" class="oe_stat_button" icon="fa-list-ul"
                                     context="{'xml_id':'servoo_stevedoring.action_stevedoring_operation'}"
-                                    help="Show the operations for this stevedoring file" string="Operations"/>
+                                    help="Show the operations for this stevedoring file">
+                                <field name="operation_count" widget="statinfo" string="Operations"/>
+                            </button>
 
                             <button name="open_operation_action" type="object" class="oe_stat_button" icon="fa-align-justify"
                                     context="{'xml_id':'servoo_stevedoring.actions_outturn_report'}"
-                                    help="Show the outturn reports for this stevedoring file" string="Outturn Reports"/>
+                                    help="Show the outturn reports for this stevedoring file">
+                                <field name="outturn_count" widget="statinfo" string="Outturns Reports"/>
+                            </button>
 
                             <button name="open_mate_receipt" type="object" class="oe_stat_button" icon="fa-align-justify"
                                     context="{'xml_id':'servoo_stevedoring.actions_mate_receipt'}"
-                                    help="Show the mate receipts for this stevedoring file" string="Mate Receipts"/>
+                                    help="Show the mate receipts for this stevedoring file">
+                                <field name="mate_receipt_count" widget="statinfo" string="Mate Receipts"/>
+                            </button>
                         </div>
                         <group>
                             <group col="4">
@@ -127,21 +139,33 @@
                                     <field name="date_end_operation" />
                                 </group>
                                 <group col="4">
-                                    <field name="manifested_quantity" />
-                                    <field name="unit_id" />
+                                    <label for="manifested_quantity" />
+                                    <div class="o_row">
+                                         <field name="manifested_quantity" />
+                                         <field name="unit_id" options="{'no_open': True, 'no_create': False}" />
+                                    </div>
                                     <field name="manifested_tonnage" />
-                                    <field name="unloaded_quantity" />
-                                    <field name="unit_id" readonly="1"/>
+                                    <label for="unloaded_quantity" />
+                                    <div class="o_row">
+                                         <field name="unloaded_quantity" />
+                                         <field name="unit_id" options="{'no_open': True, 'no_create': False}"  readonly="1"/>
+                                    </div>
                                     <field name="unloaded_tonnage" />
-                                    <field name="transported_quantity" />
-                                    <field name="unit_id" readonly="1"/>
+                                    <label for="transported_quantity" />
+                                    <div class="o_row">
+                                         <field name="transported_quantity" />
+                                         <field name="unit_id" options="{'no_open': True, 'no_create': False}"  readonly="1"/>
+                                    </div>
                                     <field name="transported_tonnage" />
                                 </group>
                             </group>
                         </group>
                         <notebook>
                             <page string="Bills of lading">
-                                <field name="bl_ids" domain="[('shipping_file_id', '=', shipping_file_id)]">
+                                <field name="bl_ids" domain="[('shipping_file_id', '=', shipping_file_id)]"
+                                context="{'default_vessel_id' : vessel_id, 'default_voyage_number': voyage_number,
+                                    'default_loading_port': loading_port, 'default_discharge_port': discharge_port}"
+                                >
                                     <tree string="Bill of lading">
                                         <field name="name"/>
                                         <field name="date"/>
@@ -159,10 +183,56 @@
 <!--                                                attrs="{'invisible': [('outturn_report_count','&gt;=',1)]}"-->
 <!--                                                class="oe_stat_button" icon="fa-print"/>-->
                                     </tree>
+                                    <form>
+                                        <group col="4">
+                                            <label for="name" string="Reference" />
+                                            <field name="name" nolabel="1"/>
+                                            <field name="date"/>
+                                            <field name="shipper_id"/>
+                                            <field name="consignee_id"/>
+                                            <field name="notify_id"/>
+                                            <field name="vessel_id"/>
+                                            <field name="voyage_number"/>
+                                            <field name="loading_port"/>
+                                            <field name="discharge_port"/>
+                                        </group>
+                                        <group string="Cargo Description">
+                                            <field name="cargo_description" colpsan="4" nolabel="1" required="1"/>
+                                        </group>
+                                        <notebook>
+                                            <page string="Goods Details">
+                                                <field name="good_ids" widget="one2many" required="1" mode="tree,form">
+                                                    <tree string="Good">
+                                                        <field name="name"/>
+                                                        <field name="quantity"/>
+                                                        <field name="unit_id"/>
+                                                        <field name="gross_weight"/>
+                                                        <field name="net_weight"/>
+                                                        <field name="volume"/>
+                                                    </tree>
+                                                    <form string="Good">
+                                                        <sheet>
+                                                            <group col="4">
+                                                                <field name="name" colpsan="4"/>
+                                                                <field name="quantity"/>
+                                                                <field name="unit_id"/>
+                                                                <field name="gross_weight"/>
+                                                                <field name="net_weight"/>
+                                                                <field name="volume"/>
+                                                            </group>
+                                                        </sheet>
+                                                    </form>
+                                                </field>
+                                            </page>
+                                        </notebook>
+                                    </form>
                                 </field>
                             </page>
                             <page string="Customs Declarations">
-                                <field name="customs_declaration_ids" widget="one2many" mode="tree,form">
+                                <field name="customs_declaration_ids" widget="one2many" mode="tree,form"
+                                    context="{'default_vessel_id' : vessel_id, 'default_voyage_number': voyage_number,
+                                    'default_loading_port': loading_port, 'default_unloading_port': discharge_port}"
+                                >
                                     <tree string="Customs Declaration">
                                         <field name="name" />
                                         <field name="date" />
@@ -181,7 +251,7 @@
                                             <group col="4">
                                                 <field name="name" />
                                                 <field name="date" />
-                                                <field name="charger_id" />
+                                                <field name="charger_id" colspan="4"/>
                                                 <field name="vessel_id" />
                                                 <field name="voyage_number" />
                                                 <field name="loading_port" />
@@ -301,5 +371,23 @@
             </field>
         </record>
         <menuitem id="stevedoring_file_menu" parent="servoo_stevedoring.stevedoring_menu" action="action_stevedoring_file"  sequence="1"/>
+
+        <record id="action_stevedoring_file_to_invoice" model="ir.actions.act_window">
+            <field name="name">Stevedoring Files</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">servoo.stevedoring.file</field>
+            <field name="view_mode">tree,form</field>
+            <field name="context">{}</field>
+            <field name="domain">[('state', '=', 'open'), ('invoice_count','&lt;=',1)]</field>
+            <field name="help" type="html">
+                <p class="o_view_nocontent_smiling_face">
+                    There is no stevedoring file to invoice!
+                </p>
+            </field>
+        </record>
+
+        <menuitem id="stevedoring_invoice_menu" parent="account.menu_finance" name="Stevedoring" sequence="5">
+            <menuitem id="stevedoring_file_invoice_menu" action="servoo_stevedoring.action_stevedoring_file_to_invoice" />
+        </menuitem>
     </data>
 </odoo>
