--- a/servoo_product/views/product_views.xml
+++ b/servoo_product/views/product_views.xml
@@ -5,11 +5,25 @@
             <field name="name">servoo.product.form</field>
             <field name="model">product.product</field>
             <field name="inherit_id" ref="product.product_normal_form_view" />
+            <field name="priority" eval="1" />
             <field name="arch" type="xml">
                 <field name="detailed_type" position="after">
                     <field name="operation_type" />
                 </field>
             </field>
         </record>
+
+<!--        <record model="ir.ui.view" id="view_servoo_product_template_form">-->
+<!--            <field name="name">servoo.product.template.form</field>-->
+<!--            <field name="model">product.template</field>-->
+<!--            <field name="inherit_id" ref="product.product_template_form_view" />-->
+<!--            <field name="priority" eval="1" />-->
+<!--            <field name="arch" type="xml">-->
+<!--                <field name="detailed_type" position="after">-->
+<!--                    <field name="operation_type" />-->
+<!--                </field>-->
+<!--            </field>-->
+<!--        </record>-->
+
     </data>
 </odoo>
